test/link/section-union/bad-types.out
error: Section "conflicting types" is defined with type HRAM at section-union/bad-types.asm(7), but with type WRAM0 at section-union/bad-types.asm(7)
---
error: <stdin>(18):
    Section already exists but with type HRAM
FATAL: <stdin>(18):
    Cannot create section "conflicting types" (1 error)
